# The-Tower-of-Trials

./: .gdbinit  .gitignore  CMakeLists.txt  ModifiableStat.cpp  README.md  Save_Slot_1.json  StatModifier.h  gemini_response_debug.json  main.cpp
Assets/Schema/: ClassSchema.json  DialogueSchema.json  MapInputSchema.json  MapOutputSchema.json  PurposeSchema.json
Class/: BasicClassTemplates.h  ClassBase.h  IClass.h
Component/: ClassComponent.h  Components.h  HealthComponent.h  ManaComponent.h  MoneyComponent.h  StatComponent.h
Core/: BSPMapGenerator.cpp  BSPMapGenerator.h  EventBus.cpp  EventBus.h  GameContext.h  GameManager.cpp  GameManager.h  ISaveData.h  MasterSaveData.h  SaveManager.cpp  SaveManager.h  SceneManager.cpp  SceneManager.h
Core/Event/: AddStatModifiableEvent.h  ChangeHealthEvent.h  ChangeManaEvent.h  CreatingEntityEvent.h  GameLoopEvent.h  InjectPurposeEvent.h  LoadCompleteEvent.h  LoadRequestEvent.h  PlayerGetEvent.h  SFXEvent.h  SaveCompleteEvent.h  SaveRequestEvent.h  SceneChangeEvent.h  ScreenRefreshEvent.h  SoundEvent.h  VolumeChangeEvent.h  VolumeGetEvent.h
Core/Scene/: FieldScene.cpp  FieldScene.h  IScene.h  IntroScene.cpp  IntroScene.h  PauseScene.cpp  PauseScene.h  SaveFileLoadScene.cpp  SaveFileLoadScene.h  SceneBase.h  SettingScene.cpp  SettingScene.h  TitleScene.cpp  TitleScene.h
Core/Scene/IntroSceneState/: AmendDataState.cpp  AmendDataState.h  ConfirmClassState.cpp  ConfirmClassState.h  ConfirmNameState.cpp  ConfirmNameState.h  ConfirmStatsState.cpp  ConfirmStatsState.h  CustomClassState.cpp  CustomClassState.h  FinalConfirmState.cpp  FinalConfirmState.h  IIntroSceneState.h  InputCustomClassState.cpp  InputCustomClassState.h  InputNameState.cpp  InputNameState.h  PersonalDataConfirmState.cpp  PersonalDataConfirmState.h  ProcessingWriteClassState.cpp  ProcessingWriteClassState.h  ProcessingWritePurposeState.cpp  ProcessingWritePurposeState.h  ProposalState.cpp  ProposalState.h  PurposeState.cpp  PurposeState.h  SelectClassState.cpp  SelectClassState.h  SelectGenderState.cpp  SelectGenderState.h  StatPointState.cpp  StatPointState.h
Datas/: ClassDTO.h  DataRegistry.h  EntityDTO.h  ItemDTO.h  ObjectDTO.h  SkillDTO.h
Entity/: Entity.cpp  Entity.h  Monster.h  MonsterFactory.h  Monsters.h  Player.cpp  Player.h  PlayerFactory.cpp  PlayerFactory.h
Network/: ConnGemini.cpp  ConnGemini.h
Stat/: ModifiableStat.cpp  ModifiableStat.h  StatModifier.cpp  StatModifier.h
Test/: BSPMapGeneratorTest.cpp  ConnGeminiTest.cpp  EntityDTOTest.cpp  ImageRendering.cpp  ModifiableStatTest.cpp  MonsterFactoryTest.cpp  PlayerTest.cpp  SaveLoadTest.cpp  SoundManagerTest.cpp  StatModifierTest.cpp  TerminalTest.cpp
UI/: IUI.h  UserInformation.cpp  UserInformation.h
UI/Presenter/: UserInformationPresenter.cpp  UserInformationPresenter.h
UI/View/: UserInformationView.cpp  UserInformationView.h
Utility/: Action.h  Camera.cpp  Camera.h  FormatString.h  ImageRenderer.cpp  ImageRenderer.h  PathHelper.h  ScreenUtility.cpp  ScreenUtility.h  SoundManager.cpp  SoundManager.h
